# sped

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sped.service
.auto/: ideas.md  log.jsonl  measure.sh  prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  awq.md  cli.md  ec2.md  guide.md
examples/: __init__.py
sped/: __init__.py
sped/adaptation/: __init__.py  osd.py
sped/cli/: __init__.py  _experiment_engine.py  config_cmd.py  distil.py  experiment.py  list_cmd.py  main.py  serve.py
sped/core/: __init__.py  draft_tree.py  kv_cache.py  metrics.py  rejection_sampling.py  speculative_decoding.py  verification.py
sped/distillation/: __init__.py  distillspec.py
sped/serving/: __init__.py  base.py  hf_backend.py  mlx_backend.py  unsloth_backend.py  vllm_backend.py
sped/utils/: __init__.py  logging.py  output.py  tokenizer_utils.py  unsloth_cache.py  validation.py
sped/vocab_agnostic/: __init__.py  alignment.py  heterogeneous.py
tests/: __init__.py  conftest.py  test_adaptation.py  test_cli.py  test_core.py  test_distillation.py  test_experiment.py  test_project_setup.py  test_serving.py  test_unsloth_cache.py  test_vocab_agnostic.py
