[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sped"
version = "0.1.0"
description = "Universal speculative decoding — any draft model, any target model, any vocabulary."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.8.0",
    "datasets>=2.15.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "accelerate>=0.27.0",
]

[project.scripts]
sped = "sped.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["sped"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests",
]

mlx = [
    "mlx-lm>=0.20.0",
]

vllm = [
    "vllm>=0.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
