[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sped"
version = "0.1.0"
description = "Universal speculative decoding — any draft model, any target model, any vocabulary."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ege Sabanci", email = "egesabanci@gmail.com" },
]
keywords = [
    "speculative-decoding", "llm-inference", "ai-acceleration",
    "large-language-models", "machine-learning", "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.8.0",
    "datasets>=2.15.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "accelerate>=0.27.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/egesabanci/sped"
Repository = "https://github.com/egesabanci/sped"
Documentation = "https://github.com/egesabanci/sped/tree/main/docs"
Issues = "https://github.com/egesabanci/sped/issues"

[project.scripts]
sped = "sped.cli.main:app"

[project.optional-dependencies]
unsloth = ["unsloth>=2025.0.0"]
mlx = ["mlx-lm>=0.20.0"]
vllm = ["vllm>=0.6.0"]
bitsandbytes = ["bitsandbytes>=0.43.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.8.0", "types-requests"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.8.0", "types-requests"]

[tool.hatch.build.targets.wheel]
packages = ["sped"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
